--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -17,14 +17,14 @@
       <div class="icon-block" title="DockerHub">
         <a href="https://hub.docker.com/u/teenasher"><i class="fa-brands fa-docker" title="DockerHub"></i></a>
       </div>
-      <div class="icon-block" title="LinkedIn">
+      <!--<div class="icon-block" title="LinkedIn">
         <a href="https://www.linkedin.com/in/tatiana-shilina-8929572a6/"><i class="fa-brands fa-linkedin" title="LinkedIn"></i></a>
+      </div> -->
+      <div class="icon-block" title="Indeed">
+        <a href="https://profile.indeed.com/?hl=en_US&co=US&from=gnav-jobseeker-profile--profile-one-frontend"><img src="static/img/indeed.svg" title="Indeed" id="indeed-img"></img></a>
       </div>
       <div class="icon-block" title="Facebook">
         <a href="https://m.facebook.com/profile.php/?id=100094857496476"><i class="fa-brands fa-facebook" title="Facebook"></i></a>
-      </div>
-      <div class="icon-block" title="Telegram">
-        <a href="https://t.me/kisik_sosisik"><i class="fa-brands fa-telegram" title="Telegram"></i></a>
       </div>
       <div class="icon-block" title="Whatsapp">
         <a href="https://wa.me/15052277910"><i class="fa-brands fa-whatsapp" title="WhatsApp"></i></a>
