--- a/templates/projects.html
+++ b/templates/projects.html
@@ -11,7 +11,7 @@
       <div class="description">
         <h4>Tristar Inn Xpress</h4>
         <p>The website - business card for a hotel. Contains its own booking system and supports the outsource booking as well.</p>
-        <p>Convenient navigation, useful side soft such as Google Maps API.</p>
+        <p>Convenient navigation, useful side software such as Google Maps API.</p>
         <p>You can reach it using the <a href="http://www.tristarxpress.com">following link</a>.</p>
       </div>
       <div class="site-image"><img src="static/img/tristarImg.png" alt="Picture of hotel" /></div>
@@ -20,7 +20,7 @@
       <div class="site-image" id="zodiac-img"><img src="static/img/zodiacImg.png" alt="Picture of zodiac" /></div>
       <div class="description">
         <h4>Zodiac online</h4>
-        <p>Simple and convenient single page Flask application for daily horoscope checkng</p>
+        <p>Simple and convenient single page Flask application for daily horoscope checking</p>
         <p>Daily forecasts and description for each zodiac sign provided</p>
         <p><a href="http://zodiac.teenasher.space">This link</a> will help you to find out your destiny.</p>
       </div>
@@ -29,7 +29,7 @@
       <div class="description">
         <h4>Check Essentials</h4>
         <p>Useful single page Flask app that allows you to check necessary thing such as latest news feeds headlines, weather forecasts and currency rates.</p>
-        <p>Supports English as well as Russian and Japanese languages. Uses cookie.</p>
+        <p>Supports English as well as Russian and Japanese languages. Uses cookies.</p>
         <p>Use <a href="http://check.teenasher.space">this link</a> to check your daily essentials.</p>
       </div>
       <div class="site-image"><img src="static/img/checkImg.png" alt="Picture of check"/></div>
